# echoed

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
examples/: cr2032.twin.json
src/battwin/: __init__.py  cli.py  envelope.py  validate.py
src/battwin/context/: twin-envelope.context.jsonld
src/battwin/schemas/: twin-envelope.schema.json
src/echoed/: __init__.py  cli.py  envelope.py  io.py  validate.py
src/echoed/context/: twin-envelope.context.jsonld
tests/: test_cli.py  test_envelope.py  test_extensions.py  test_validate.py
