[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battwin"
version = "0.4.0"
description = "Battery Twin Envelope (BTE): an open specification and reference SDK for expressing and exchanging battery digital twins"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Clark"},
]
keywords = ["battery", "digital-twin", "battery-passport", "linked-data", "bdf", "battinfo", "bpx", "battwin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pydantic>=2.0,<3",
  "jsonschema>=4.18,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff",
  "mypy",
  "types-jsonschema",
]
shacl = ["pyshacl>=0.25"]

[project.scripts]
battwin = "battwin.cli:main"

[project.urls]
Homepage = "https://github.com/DigiBatt/battwin"
Repository = "https://github.com/DigiBatt/battwin"
Issues = "https://github.com/DigiBatt/battwin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
battwin = ["schemas/*.json", "context/*.jsonld", "shapes/*.ttl", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
